# cookiecutters

bash/: cookiecutter.json
bash/{{cookiecutter.script_name}}/: {{cookiecutter.script_name}}.sh
haskell/: cookiecutter.json
haskell/{{cookiecutter.project_name}}/: .gitignore  README.md  default.nix  flake.nix  release.nix  {{cookiecutter.project_name}}.cabal
haskell/{{cookiecutter.project_name}}/src/: Prelude.hs
haskell/{{cookiecutter.project_name}}/test/: GoldenTests.hs  Prelude.hs  QuickCheck.hs  UnitTests.hs
